--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="grid">
           <article>
             <h3>When</h3>
-            <p>Saturday, December 7, 2024<br />12:00 PM – 4:00 PM</p>
+            <p>Sunday, December 7, 2025<br />11:15 AM – 2:00 PM</p>
           </article>
           <article>
             <h3>Where</h3>
